Spring Framework - 9. Business validation